(refactor) : refactored the Navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- smooth scroll-->
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.27/bundled/lenis.min.js"></script>
 
-    <!-- fonts -->s
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
