(modal) : made the modal component

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="icon" href="./public/skull.svg" type="image/x-icon" />
+    <link rel="icon" href="/skull.svg" type="image/x-icon" />
     <title>Brain-Wave</title>
 
     <!-- aos -->
